--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/mlires89/backend43360/issues"
   },
-  "homepage": "https://github.com/mlires89/backend43360#readme"
+  "homepage": "https://github.com/mlires89/backend43360#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
