--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "backend43360",
+  "name": "desafios",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "express-server/src/app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon express-server/src/app.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mlires89/backend43360.git"
+    "url": "git+https://github.com/mlires89/backend-39700.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mlires89/backend43360/issues"
+    "url": "https://github.com/mlires89/backend-39700/issues"
   },
-  "homepage": "https://github.com/mlires89/backend43360#readme",
+  "homepage": "https://github.com/mlires89/backend-39700#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
   }
 }
