--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/mlires89/backend-39700#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "express-handlebars": "^7.0.7",
+    "nodemon": "^2.0.22",
+    "socket.io": "^4.7.0"
   }
 }
